switching back to the bigger view model and added a partial for intake

--- a/Odin/Views/Orders/Transferee.cshtml
+++ b/Odin/Views/Orders/Transferee.cshtml
@@ -42,12 +42,13 @@
     @Scripts.Render("~/Scripts/transferee")
     
     <script>
-    var GorderId = '@Model.Id';
-    $(document).ready(function () {
-        OrdersPageController.TransfereeInit();
-        TransfereeIntakeController.init();
-        TransfereeDetailsController.init();
-    });
+        var currentOrderId = '@Model.Id';
+
+        $(document).ready(function () {
+            OrdersPageController.TransfereeInit();
+            TransfereeIntakeController.init();
+            TransfereeDetailsController.init();
+        });
     </script>
 
 }
