Added call to document on ready to both, intake and detail partial views

--- a/Odin/Views/Orders/Partials/_Details.cshtml
+++ b/Odin/Views/Orders/Partials/_Details.cshtml
@@ -165,3 +165,9 @@
     </div>
 </div>
 @Styles.Render("~/Styling/details")
+
+<script>
+    $(document).ready(function () {        
+        TransfereeDetailsController.init();
+    });
+</script>
