--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -560,3 +560,8 @@
     </div>
 </div>
 @Styles.Render("~/Styling/intake")
+<script>
+    $(document).ready(function () {
+        TransfereeIntakeController.init();       
+    });
+</script>
