included on-click display for the  Housing tab

--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="housing" class="frame noinit">
+﻿<div id="housing" class="frame">
     <div class="row">
         <div class="col-md-6">
             <p id="caption">Housing Summary</p>
@@ -412,7 +412,7 @@
 
 @Styles.Render("~/Styling/housing")
 
-<script>
+@*<script>
     var $lastFilter;
 
     document.addEventListener("DOMContentLoaded", function () {
@@ -505,4 +505,4 @@
             });
         });
     });
-</script>
+</script>*@
