Adding string methods for number of baths and housing type

--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -24,12 +24,12 @@
             </div>
             <div class="col-md-6">
                 <div>
-                    <p>@Html.DisplayNameFor(model => model.HousingType)</p>
-                    <span>@Html.DisplayFor(model => model.HousingType.Name)</span>
+                    <p>@Html.DisplayNameFor(model => model.HousingTypeString)</p>
+                    <span>@Html.DisplayFor(model => model.HousingTypeString)</span>
                 </div>
                 <div>
-                    <p>@Html.DisplayNameFor(model => model.NumberOfBathrooms)</p>
-                    <span>@Html.DisplayFor(model => model.NumberOfBathrooms.Name)</span>
+                    <p>@Html.DisplayNameFor(model => model.NumberOfBathroomsString)</p>
+                    <span>@Html.DisplayFor(model => model.NumberOfBathroomsString)</span>
                 </div>
                 <div>
                     <p>Distance from Work:</p>
@@ -45,6 +45,7 @@
             <img src="~/Content/Images/map_placeholder.png"/>
         </div>
     </div>
+    
     <div class="row notfirst">
         <div>
             <span>Filter:</span>
