--- a/Odin/Views/Orders/Partials/_Details.cshtml
+++ b/Odin/Views/Orders/Partials/_Details.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Odin.ViewModels.Orders.Transferee.OrdersTransfereeViewModel
 
-<div id="details" data-order-id="@Model.Id">
+<div class="container-fluid" id="details" data-order-id="@Model.Id">
     <div class="row details-title">
         <p>Profile Summary</p>
-        <span class="details-blue">Please fill out any items that are not already auto-generated that could aid in the help of your clients placement.</span>
+        <span class="details-blue"></span>
     </div>
     <hr />
     <div class="details-block">
@@ -13,28 +13,28 @@
             </P>
         </div>
         <div class="row details-row">
-            <div class="col-sm-3 details-col">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                 <label>Familiarization Trip:</label>
-                <span>@(Model.PreTripDate.HasValue ? Model.PreTripDate.Value.ToString("MM/dd/yy") : "TBD")</span>
+                <span>@Model.PreTripDateDisplay</span>
             </div>
-            <div class="col-sm-3 details-col">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                 <label>Work Start Date:</label>
-                <span>@(Model.WorkStartDate.HasValue ? Model.WorkStartDate.Value.ToString("MM/dd/yy") : "TBD")</span>
+                <span>@Model.WorkStartDateDisplay</span>
             </div>
-            <div class="col-sm-3 details-col">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                 <label>Temp Housing:</label>
                 <span>@Model.TempHousingDays</span>
             </div>
 
-            <div class="col-sm-3 details-col">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                 <label>Final Arrival:</label>
                 <span>@(Model.FinalArrivalDate.HasValue ? Model.FinalArrivalDate.Value.ToString("MM/dd/yy") : "TBD")</span>
             </div>
-            <div class="col-sm-3 details-col">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                 <label>Home Finding Date:</label>
                 <span>@(Model.HomeFindingDate.HasValue ? Model.HomeFindingDate.Value.ToString("MM/dd/yy") : "TBD")</span>
             </div>
-            <div class="col-sm-3 details-col">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                 <label>Temp Housing Last Day:</label>
                 <span>@(Model.TempHousingEndDate.HasValue ? Model.TempHousingEndDate.Value.ToString("MM/dd/yy") : "TBD")</span>
             </div>
@@ -49,28 +49,28 @@
             </P>
         </div>
        <div class="row details-row">
-        <div class="col-sm-3 details-col">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
             <label>Monthly Budget:</label>
             <span>@string.Format("{0: $#,###.00}", @Model.Rent.HousingBudget)</span>
         </div>
-        <div class="col-sm-3 details-col">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
             <label>Housing:</label>
             <span>@(Model.Rent.HousingType != null ? Model.Rent.HousingType.ToString() : "TBD")</span>
         </div>
-        <div class="col-sm-3 details-col">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
             <label>School District:</label>
             <span>@(Model.SchoolDistrict != null ? Model.SchoolDistrict : "TBD") </span>
         </div>
 
-        <div class="col-sm-3 details-col">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
             <label>BD/BA:</label>
             <span>@Model.Rent.NumberOfBedrooms.ToString()/@(Model.Rent.NumberOfBathrooms != null ? Model.Rent.NumberOfBathrooms.ToString() : "TBD")</span>
         </div>
-        <div class="col-sm-3 details-col">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
             <label>Sq.Ft:</label>
             <span>@string.Format("{0: #,###.00}", @Model.Rent.SquareFootage)</span>
         </div>
-        <div class="col-sm-3 details-col">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
             <label>Rent or Own:</label>
             <span>@Model.Rent.OwnershipType</span>
         </div>
@@ -84,23 +84,23 @@
             </P>
         </div>
         <div class="row details-row">
-            <div class="col-sm-3 details-col">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                 <label>Manager:</label>
                 <span>@Model.ProgramManager.FullName</span>
             </div>
-            <div class="col-sm-3 details-col">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                 <label>Manager Email:</label>
                 <span>@Model.ProgramManager.Email</span>
             </div>
-            <div class="col-sm-3 details-col">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                 <label>Manager #:</label>
                 <span> @String.Format("{0:###'.'###'.'####}", double.Parse(@Model.ProgramManager.PhoneNumber))</span>
             </div>
-            <div class="col-sm-3 details-col">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                 <label>SE Number:</label>
                 <span>@Model.ProgramManager.SeContactUid</span>
             </div>
-            <div class="col-sm-3 details-col">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                 <label>Client Number:</label>
                 <span>@(Model.ClientFileNumber != null ? Model.ClientFileNumber.ToString() : "TBD")</span>
             </div>
@@ -122,20 +122,20 @@
         <hr />
         <div class="details-block" id="scheduledServices">
             <div class="row details-row">
-                <div class="col-sm-3 details-col">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                     <H5>Service:</H5>
                 </div>
-                <div class="col-sm-3 details-col">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                     <H5>Scheduled Date:</H5>
                 </div>
-                <div class="col-sm-3 details-col">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                     <H5>Time:</H5>
                 </div>
-                <div class="col-sm-3 details-col">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                     <H5>Completed Date:</H5>
                 </div>
                 
-                <div class="col-sm-3 details-col">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                     <H5>Notes:</H5>
                 </div>
             </div>
@@ -145,20 +145,20 @@
                     if (Model.Services.ElementAt(i).Selected)
                     {
                 <div class="row details-row" data-entity-id="@Model.Services.ElementAt(i).Id" data-entity-collection="services">
-                    <div class="col-sm-3 details-col">
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                         <label>@Model.Services.ElementAt(i).Name.</label>
                     </div>
-                    <div class="col-sm-3 details-col">
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                         @Html.DatePicker("date", "ScheduledDate", Model.Services.ElementAt(i).ScheduledDateDisplay)
                     </div>
-                    <div class="col-sm-3 details-col">
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                         @Html.DatePicker("time", "ScheduledTime", Model.Services.ElementAt(i).ScheduledTimeDisplay)
                         <div class="text-danger" style="display:none;" data-entity-id="@Model.Services.ElementAt(i).Id" data-valmsg-replace="true" ><div for="ScheduledTime">Schedule time is required.</div></div>
                     </div>
-                    <div class="col-sm-3 details-col">
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                         @Html.DatePicker("date", "CompletedDate", Model.Services.ElementAt(i).CompletedDateDisplay)
                     </div>                        
-                    <div class="col-sm-3 details-col">
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 details-col">
                         <p>@Html.TextAreaFor(s => @Model.Services.ElementAt(i).Notes, new { @class = "form-control intake-service-input" })</p>
                     </div>
                 </div>
