--- a/Odin/Views/Orders/Partials/_Details.cshtml
+++ b/Odin/Views/Orders/Partials/_Details.cshtml
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-    @if (@Model.Rent != null)
+    @if (@Model.HomeFinding != null)
     {
     <div class="details-block">
         <div class="row details-header">
@@ -51,11 +51,11 @@
        <div class="row details-row">
         <div class="col-sm-3 details-col">
             <label>Monthly Budget:</label>
-            <span>@string.Format("{0: $#,###.00}", @Model.Rent.HousingBudget)</span>
+            <span>@string.Format("{0: $#,###.00}", @Model.HomeFinding.HousingBudget)</span>
         </div>
         <div class="col-sm-3 details-col">
             <label>Housing:</label>
-            <span>@(Model.Rent.HousingType != null ? Model.Rent.HousingType.ToString() : "TBD")</span>
+            <span>@(Model.HomeFinding.HousingType != null ? Model.HomeFinding.HousingType.ToString() : "TBD")</span>
         </div>
         <div class="col-sm-3 details-col">
             <label>School District:</label>
@@ -64,15 +64,15 @@
 
         <div class="col-sm-3 details-col">
             <label>BD/BA:</label>
-            <span>@Model.Rent.NumberOfBedrooms.ToString()/@(Model.Rent.NumberOfBathrooms != null ? Model.Rent.NumberOfBathrooms.ToString() : "TBD")</span>
+            <span>@Model.HomeFinding.NumberOfBedrooms.ToString()/@(Model.HomeFinding.NumberOfBathrooms != null ? Model.HomeFinding.NumberOfBathrooms.ToString() : "TBD")</span>
         </div>
         <div class="col-sm-3 details-col">
             <label>Sq.Ft:</label>
-            <span>@string.Format("{0: #,###.00}", @Model.Rent.SquareFootage)</span>
+            <span>@string.Format("{0: #,###.00}", @Model.HomeFinding.SquareFootage)</span>
         </div>
         <div class="col-sm-3 details-col">
             <label>Rent or Own:</label>
-            <span>@Model.Rent.OwnershipType</span>
+            <span>@Model.HomeFinding.OwnershipType</span>
         </div>
     </div>
     </div>
