--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -14,12 +14,12 @@
                     <span>@Html.DisplayFor(model => model.NumberOfBedrooms)</span>
                 </div>
                 <div>
-                    <p>Pets:</p>
-                    <span>1 Dog, 1 Cat</span>
+                    <p>@Html.DisplayNameFor(model => model.NumberOfPets)</p>
+                    <span>@Html.DisplayFor(model => model.NumberOfPets) </span>
                 </div>
                 <div>
-                    <p>Transportation:</p>
-                    <span>Bus</span>
+                    <p>@Html.DisplayNameFor(model => model.TransportationTypeString)</p>
+                    <span>@Html.DisplayFor(model => model.TransportationTypeString)</span>
                 </div>
             </div>
             <div class="col-md-6">
@@ -32,30 +32,31 @@
                     <span>@Html.DisplayFor(model => model.NumberOfBathroomsString)</span>
                 </div>
                 <div>
-                    <p>Distance from Work:</p>
-                    <span>10 miles or less</span>
+                    <p>@Html.DisplayNameFor(model => model.MaxCommute)</p>
+                    <span>@Html.DisplayFor(model => model.MaxCommute)</span>
                 </div>
                 <div>
-                    <p>Spouse and Kids:</p>
-                    <span>Yes, 2</span>
+                    <p>@Html.DisplayNameFor(model => model.SpouceAndKids)</p>
+                    <span>@Html.DisplayFor(model => model.SpouceAndKids)</span>
                 </div>
             </div>
         </div>
         <div class="col-md-6">
-            <img src="~/Content/Images/map_placeholder.png"/>
+            <img src="~/Content/Images/map_placeholder.png" />
         </div>
     </div>
-    
+
+
     <div class="row notfirst">
         <div>
             <span>Filter:</span>
             <div>
-                <input type="radio" name="choice" value="new"><span>New</span>
-                <input type="radio" name="choice" value="like"><span>Like</span>
-                <input type="radio" name="choice" value="dislike"><span>Dislike</span>
-            </div> 
+                <input type = "radio" name="choice" value="new"><span>New</span>
+                <input type = "radio" name="choice" value="like"><span>Like</span>
+                <input type = "radio" name="choice" value="dislike"><span>Dislike</span>
+            </div>
         </div>
-        <div id="add">
+        <div id = "add" >
             <img src="~/Content/Images/btn_add_home.png" />
             <span>Add Property</span>
         </div>
@@ -96,7 +97,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                    <tr sel="new">
+                    <tr sel = "new" >
                         <td>
                             <img class="location" src="~/Content/Images/popout_sml_img.png" />
                         </td>
@@ -127,7 +128,7 @@
                                 <img class="comment" src="~/Content/Images/icn_chat_bubble.png" />
                                 <div class="notify-count">
                                     <img src="~/Content/Images/icn_alert_circle.png" />
-                                    <span>03</span>
+                                    <span > 03 </span >
                                 </div>
                             </div>
                         </td>
@@ -150,8 +151,8 @@
                         </td>
                         <td>
                             <img src="~/Content/Images/icn_cal_B1.png" />
-                        </td>
-                        <td>
+                        </td >
+                        <td >
                             <div class="likebtns">
                                 <img class="new" src="~/Content/Images/icn_ln_non_selected_like.png" />
                                 <img class="like noinit" src="~/Content/Images/icn_ln_selected_like.png" />
@@ -163,11 +164,11 @@
                                 <img class="comment" src="~/Content/Images/icn_chat_bubble.png" />
                                 <div class="notify-count noinit">
                                     <img src="~/Content/Images/icn_alert_circle.png" />
-                                    <span>00</span>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
+                                    <span > 00 </span >
+                                </div >
+                            </div >
+                        </td >
+                    </tr >
                     <tr sel="new">
                         <td>
                             <img class="location" src="~/Content/Images/popout_sml_img.png" />
@@ -186,8 +187,8 @@
                         </td>
                         <td>
                             <img src="~/Content/Images/icn_cal_B1.png" />
-                        </td>
-                        <td>
+                        </td >
+                        <td >
                             <div class="likebtns">
                                 <img class="new" src="~/Content/Images/icn_ln_non_selected_like.png" />
                                 <img class="like noinit" src="~/Content/Images/icn_ln_selected_like.png" />
@@ -199,11 +200,11 @@
                                 <img class="comment" src="~/Content/Images/icn_chat_bubble.png" />
                                 <div class="notify-count noinit">
                                     <img src="~/Content/Images/icn_alert_circle.png" />
-                                    <span>00</span>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
+                                    <span > 00 </span >
+                                </div >
+                            </div >
+                        </td >
+                    </tr >
                     <tr sel="new">
                         <td>
                             <img class="location" src="~/Content/Images/popout_sml_img.png" />
@@ -222,8 +223,8 @@
                         </td>
                         <td>
                             <img src="~/Content/Images/icn_cal_B1.png" />
-                        </td>
-                        <td>
+                        </td >
+                        <td >
                             <div class="likebtns">
                                 <img class="new" src="~/Content/Images/icn_ln_non_selected_like.png" />
                                 <img class="like noinit" src="~/Content/Images/icn_ln_selected_like.png" />
@@ -235,11 +236,11 @@
                                 <img class="comment" src="~/Content/Images/icn_chat_bubble.png" />
                                 <div class="notify-count">
                                     <img src="~/Content/Images/icn_alert_circle.png" />
-                                    <span>01</span>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
+                                    <span > 01 </span >
+                                </div >
+                            </div >
+                        </td >
+                    </tr >
                     <tr sel="new">
                         <td>
                             <img class="location" src="~/Content/Images/popout_sml_img.png" />
@@ -258,8 +259,8 @@
                         </td>
                         <td>
                             <img src="~/Content/Images/icn_cal_B1.png" />
-                        </td>
-                        <td>
+                        </td >
+                        <td >
                             <div class="likebtns">
                                 <img class="new" src="~/Content/Images/icn_ln_non_selected_like.png" />
                                 <img class="like noinit" src="~/Content/Images/icn_ln_selected_like.png" />
@@ -271,80 +272,80 @@
                                 <img class="comment" src="~/Content/Images/icn_chat_bubble.png" />
                                 <div class="notify-count noinit">
                                     <img src="~/Content/Images/icn_alert_circle.png" />
-                                    <span>00</span>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+                                    <span > 00 </span >
+                                </div >
+                            </div >
+                        </td >
+                    </tr >
+                </tbody >
+            </table >
+        </div >
+    </div >
     <div id="chat">
-        <div id="addr">
-            <span>Last Message</span><span id="lastchat"> 01:45 PM</span>
+        <div id = "addr" >
+            <span> Last Message</span><span id = "lastchat" > 01:45 PM</span>
         </div>
-        <div id="chatwrapper">
+        <div id = "chatwrapper" >
             <div id="chatframe">
                 <ul>
                     <li>
-                        <img src="~/Content/Images/icn_chat_2.png"/><span>Joyce Damino</span>
+                        <img src="~/Content/Images/icn_chat_2.png" /><span > Joyce Damino</span>
                         <div>
                             <p>Would you like to go see 1234 MeadowRd on the 11th of November?</p>
                         </div>
                     </li>
                     <li>
-                        <img src="~/Content/Images/icn_chat_1.png" /><span>Victoria Sporer</span>
+                        <img src="~/Content/Images/icn_chat_1.png" /><span > Victoria Sporer</span>
                         <div>
-                            <p>Yes, I would like to go visit 1234 Meadow Rd. That will work well, I am bringing the kids.</p>
+                            <p>Yes, I would like to go visit 1234 Meadow Rd.That will work well, I am bringing the kids.</p>
                         </div>
                     </li>
                     <li>
-                        <img src="~/Content/Images/icn_chat_2.png" /><span>Joyce Damino</span>
+                        <img src="~/Content/Images/icn_chat_2.png" /><span > Joyce Damino</span>
                         <div>
                             <p>Sounds good, I will see you all there at 10am?</p>
                         </div>
                     </li>
                     <li>
-                        <img src="~/Content/Images/icn_chat_2.png" /><span>Joyce Damino</span>
+                        <img src="~/Content/Images/icn_chat_2.png" /><span > Joyce Damino</span>
                         <div>
                             <p>Would you like to go see 1232 RoseLn on the 11th of November</p>
                         </div>
                     </li>
                     <li>
-                        <img src="~/Content/Images/icn_chat_1.png" /><span>Victoria Sporer</span>
+                        <img src="~/Content/Images/icn_chat_1.png" /><span > Victoria Sporer</span>
                         <div>
-                            <p>Yes, I would like to go visit 1232 RoseLn. That will work well, we can do this one in the afternoon.</p>
+                            <p>Yes, I would like to go visit 1232 RoseLn.That will work well, we can do this one in the afternoon.</p>
                         </div>
                     </li>
                     <li>
-                        <img src="~/Content/Images/icn_chat_2.png" /><span>Joyce Damino</span>
+                        <img src="~/Content/Images/icn_chat_2.png" /><span > Joyce Damino</span>
                         <div>
                             <p>Sounds good, I will call and make sure we can get in then.</p>
                         </div>
                     </li>
                 </ul>
             </div>
-            <div id="comment">
-                <p>Comment</p>
-            </div>
-            <button>Close</button>
-            <button>Send</button>
-        </div>
-    </div>
-    <div id="property">
+            <div id = "comment" >
+                < p > Comment </ p >
+            </div >
+            < button > Close </ button >
+            < button > Send </ button >
+        </div >
+    </div >
+    <div id= "property" >
         <div class="row">
             <div class="col-md-5">
                 <span>Available: </span><span>November 12th 2017</span>
             </div>
             <div class="col-md-5">
-                <img id="closeproperty" src="~/Content/Images/icn_close_pg.png"/>
+                <img id = "closeproperty" src="~/Content/Images/icn_close_pg.png"/>
             </div>
         </div>
         <div class="row">
             <div class="col-md-8">
-                <img src="~/Content/Images/image_placeholder_large.png"/>
-            </div>
+                <img src="~/Content/Images/image_placeholder_large.png" />
+            </div >
             <div class="col-md-4">
                 <div>
                     <span>Address:</span>
@@ -354,7 +355,7 @@
                     <p>$1,200 a month</p>
 
                     <span>Housing Type and Sq.Ft:</span>
-                    <p>900 Sq.Ft. Condo</p>
+                    <p>900 Sq.Ft.Condo</p>
 
                     <span>Bedrooms and Bathrooms:</span>
                     <p>2.2</p>
@@ -377,9 +378,9 @@
         <div class="row">
             <div class="col-md-8">
                 <img src="~/Content/Images/Desktop_ln_image_placeholder.png" />
+                < img src="~/Content/Images/Desktop_ln_image_placeholder.png" />
                 <img src="~/Content/Images/Desktop_ln_image_placeholder.png" />
-                <img src="~/Content/Images/Desktop_ln_image_placeholder.png" />
-                <img src="~/Content/Images/Desktop_ln_image_placeholder.png" />
+                < img src="~/Content/Images/Desktop_ln_image_placeholder.png" />
             </div>
             <div class="col-md-4">
                 <div>
@@ -397,18 +398,18 @@
                         <img src="~/Content/Images/icn_chat_bubble.png" />
                         <div class="notify-count noinit">
                             <img src="~/Content/Images/icn_alert_circle.png" />
-                            <span>00</span>
-                        </div>
-                    </div>
-                    <div>
-                        <img src="~/Content/Images/icn_cal_B1.png"/>
+                            <span > 00 </span >
+                        </div >
+                    </div >
+                    <div >
+                        < img src="~/Content/Images/icn_cal_B1.png"/>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
             <p>Other Notes:</p>
-            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnum aliquam quaerat voluptatem. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnum aliquam quaerat voluptatem. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,</p>
+            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnum aliquam quaerat voluptatem.Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnum aliquam quaerat voluptatem. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,</p>
         </div>
     </div>
 </div>
